# 2023_1_Blockify

./: .gitignore  CMakeLists.txt  README.md  mainwindow.ui
doc/: VoxelEngine.drawio
include/: ICamera.h  IFileManager.h  IImage.h  IObject.h  IObject.h.autosave  IObjectStorage.h  IVoxelEngine.h  ObjectFactory.h  mainwindow.h
include/ObjectPlacer/: IObjectFactory.h  LandScape.h  LandScape.h.autosave  ObjectPlacer.h
include/ObjectTable/: IObjectTable.h  ObjectTable.h
include/Scene/: IImageConverter.h  IImageProcessor.h  PngConverter.h  PngCreator.h  Scene.h
include/StateManager/: IOperationStorage.h  IStateManager.h  OperationStorage.h  StateManager.h
include/StateManager/Operation/: AddLandscapeOperation.h  AddObjectOperation.h  DeleteObjectOperation.h
include/VoxelEngine/: IVoxelEngine.h  VoxelEngine.h
include/view/: IObjectFactory.h  IObjectStorage.h  IObjectStorage.h.autosave  ObjectFactory.h  mainwindow.h
include/view/ObjectDrawer/: IObjectDrawer.h  ObjectDrawer.h
include/view/ObjectTable/: IObjectTable.h  ObjectTable.h
include/view/StateManager/: IOperationStorage.h  IStateManager.h  OperationStorage.h  StateManager.h
include/view/StateManager/Operation/: AddLandscapeOperation.h  AddObjectOperation.h  DeleteObjectOperation.h  IOperation.h
prod/: CMakeLists.txt  cube.cpp  cube.hpp  main.cpp
src/: CMakeLists.txt  main.cpp
src/Image/: BmpImage.cpp  IImage.cpp  PngImage.cpp
src/ObjectPlacer/: LandScape.cpp  ObjectPlacer.cpp
src/Scene/: PngConverter.cpp  PngCreator.cpp  Scene.cpp
src/StateManager/: CMakeLists.txt  OperationStorage.cpp  StateManager.cpp
src/VoxelEngine/: VoxelEngine.cpp
src/tests/: CMakeLists.txt  ObjectPlacerTests.cpp  SceneTests.cpp  StateManagerTests.cpp
src/view/: CMakeLists.txt  ObjectFactory.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/view/ObjectDrawer/: CMakeLists.txt  ObjectDrawer.cpp
src/view/ObjectTable/: CMakeLists.txt  ObjectTable.cpp
src/view/StateManager/: CMakeLists.txt  OperationStorage.cpp  StateManager.cpp
src/view/StateManager/Operation/: AddLandscapeOperation.cpp  AddObjectOperation.cpp  CMakeLists.txt  DeleteObjectOperation.cpp
